# haskell

learn you a haskell for great good/ch1/: main.hs
learn you a haskell for great good/ch10/: main.hs
learn you a haskell for great good/ch11/: main.hs
learn you a haskell for great good/ch3/: main.hs
learn you a haskell for great good/ch4/: main.hs
learn you a haskell for great good/ch5/: main.hs
learn you a haskell for great good/ch6/: main.hs
learn you a haskell for great good/ch7/: main.hs
learn you a haskell for great good/ch8/: main.hs
real-world-haskell/ch1/: main.hs  quux.txt
real-world-haskell/ch10/: PNM.hs
real-world-haskell/ch2/: add.hs
real-world-haskell/ch3/: main.hs
real-world-haskell/ch4/: main  main.hi  main.hs
real-world-haskell/ch5/: Main.hi  Prettify.hs  PutJSON.hs  SimpleJSON.hi  SimpleJSON.hs  simple
real-world-haskell/ch9.hsproj/: .uuid  BetterPredicate.hs  RecursiveContents.hs  SimpleFinder.hs  ch9.cabal
rwh/ch01/: ch01.cabal
write_yourself_a_scheme/Evaluation1/: evaluator1.hi  evaluator1.hs  simple_parser
write_yourself_a_scheme/Parsing/: datatypeparser.hi  datatypeparser.hs  recursiveparser.hs  simple_parser
